--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@feathersjs/feathers": "^3.2.3",
+    "@feathersjs/socketio-client": "^1.1.4",
+    "@types/feathersjs__feathers": "^3.0.5",
+    "@types/feathersjs__socketio-client": "^1.0.1",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.2.0",
