--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "@feathersjs/socketio-client": "^1.1.4",
     "@types/feathersjs__feathers": "^3.0.5",
     "@types/feathersjs__socketio-client": "^1.0.1",
+    "@types/socket.io-client": "^1.4.32",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.2.0",
+    "socket.io-client": "^2.1.1",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
